improve linux terminal drag and drop support